# Neobis_final_project

./: Dockerfile  docker-compose.yml  pyproject.toml
neoquiz_app/: db.sqlite3  manage.py  pyproject.toml
neoquiz_app/neoquiz/: apps.py  models.py  serializers.py  urls.py  views.py
neoquiz_app/neoquiz/migrations/: 0001_category_and_article.py
neoquiz_app/neoquiz_app/: asgi.py  settings.py  urls.py  wsgi.py
